# compliance-users

./: .pre-commit-config.yaml  .zenodo.json  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
compliance_users/: __init__.py
compliance_users/scripts/: build_users_data.py  facilities.py  projects.py  sandbox.ipynb  users_and_facilities.py  users_and_projects.py
components/: layout.js  main.js  methods.md  results.js  search.js  use-store.js
data/: nc-arboc_issuance_2024-12-10.xlsx
data/compliance-reports/: nc-CP4compliancereport.xlsx
data/mrr-data/: 2023-ghg-emissions-2024-11-15.xlsx
data/outputs/: user_data_v1.0.json  user_data_v2.0.json  user_data_v3.0.json  user_data_v4.0.json
docs/: make-updates.md
pages/: _app.js  _document.js
scripts/: build_users_data.py  facilities.py  sandbox.ipynb  users_and_facilities.py  users_and_projects.py
